# al-qawaed

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
al_qawaed/: __init__.py
al_qawaed/api/: __init__.py  apps.py  urls.py
al_qawaed/api/tests/: test_views.py
al_qawaed/apps/home/: apps.py  models.py
al_qawaed/apps/home/tests/: __init__.py  test_models.py
al_qawaed/cms/: __init__.py  apps.py
al_qawaed/ui/: __init__.py  apps.py  urls.py  views.py
al_qawaed/ui/static/ad_diwan/: .prettierrc  README.md
al_qawaed/ui/templates/ad_diwan/: about.html  base.html  contact.html  contact_landing.html  index.html  search.html
al_qawaed/ui/templates/registration/: logged_out.html  login.html
al_uloum/: __init__.py
al_uloum/api/: __init__.py  apps.py  urls.py
al_uloum/api/tests/: __init__.py  test_views.py
al_uloum/apps/home/: apps.py  models.py
al_uloum/apps/home/tests/: __init__.py  test_models.py
al_uloum/apps/indexes/: __init__.py  apps.py  models.py
al_uloum/apps/indexes/migrations/: 0001_initial.py
al_uloum/apps/indexes/tests/: __init__.py  test_models.py
al_uloum/apps/pages/: __init__.py  apps.py  models.py
al_uloum/apps/pages/migrations/: 0001_initial.py
al_uloum/apps/pages/tests/: __init__.py  test_models.py
al_uloum/apps/sections/: __init__.py  apps.py  models.py
al_uloum/cms/: __init__.py  apps.py  blocks.py
al_uloum/ui/: __init__.py  apps.py  urls.py  views.py
al_uloum/ui/templatetags/: al_uloum.py
(+14 files in other folders)
