[tool.poetry]
name = "al-uloum"
version = "0.1.0"
description = "Arabic Grammar"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "al_uloum" }]
homepage = "https://github.com/al-arabiyya/al-uloum"
repository = "https://github.com/al-arabiyya/al-uloum"
documentation = "https://github.com/al-arabiyya/al-uloum"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
wagtail = ">=7.3"
wagtail-tw-blocks = ">=0.3.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=6.0.0"
black = ">=25.1.0"
ruff = ">=0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
